src/objects/Campaign_List_Additional_Campaigns__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_List_Generation__c</fullName>
        <label>Campaign List Generation</label>
        <referenceTo>Campaign_List_Generation__c</referenceTo>
        <relationshipLabel>Additional Campaigns</relationshipLabel>
        <relationshipName>Additional_Campaigns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Additional Campaigns</relationshipLabel>
        <relationshipName>Additional_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Split Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Campaign List -  Additional Campaigns</label>
    <nameField>
        <displayFormat>AC-{00000000}</displayFormat>
        <label>Campaign List -  Additional Campaigns Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Campaigns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>